remove excess file added favicon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#card">Headlines</a></li>
             <li><a href="#button">Buttons</a></li>
             <li><a href="#input">Inputs</a></li>
-            <li><a href="#lists">List</a></li>
+            <li><a href="#list">List</a></li>
             <li><a href="#table">Tables</a></li>
             <li><a href="#images">Image</a></li>
           </ul>
