--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="container">
     <div class="row" style="margin-top: 25%">
       <div class="one-third column">
-        <img src="images/bentobox.png" alt="" style="height:250px; width:auto; ">
+        <img src="images/bentoBox.png" alt="" style="height:250px; width:auto; ">
       </div>
       <div class="one-half column">
         <h4>Bento Box</h4>
