remove about text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </span>
 
-      <span href="" class="navLink drop">CSS
+      <span href="" class="navLink drop">Layout
         <div class="dropdownContain">
           <div class="dropOut">
             <div class="triangle"></div>
@@ -60,6 +60,7 @@
               <li><a href="">Grid</a></li>
               <li><a href="">Navbar</a></li>
               <li><a href="">DropDowns</a></li>
+              <li><a href="">Footer</a></li>
             </ul>
           </div>
         </div>
@@ -78,7 +79,7 @@
       </div>
       <div class="one-half column">
         <h4>Bento Box</h4>
-        <p>This index.html page contains all the ui element that will used in the superseede project. It is based on the Skeleton CSS boilerplate. Using the typographic sizes and the 960 grid. But with aded components for images, navbar, flexbox grids and theming. If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <p></p>
         <a href="" class="button button-primary">Download It</a> <a href="" class="button"> Fork It</a>
       </div>
     </div>
