--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
       </span>
-      <a href="" class="navLink">Download</a>
+      <a href="http://github.com/halfsail/Bento-Box/master/" class="navLink">Download</a>
     </section>
   </div>
   </nav>
