--- a/index.html
+++ b/index.html
@@ -1,295 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Bento-box by halfsail</title>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Bento-box</h1>
+        <p>A small modular boilerplate for tasty CSS</p>
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <p class="view"><a href="https://github.com/halfsail/Bento-Box">View the Project on GitHub <small>halfsail/Bento-Box</small></a></p>
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="scss/bento.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-
-</head>
-<body>
-  <nav>
-    <div class="container">
-    <section class="navbar-branding">
-      <a href="">bento</a>
-    </section>
-    <section class="link-area">
-      <span href="" class="navLink drop">Components
-      <div class="dropdownContain">
-        <div class="dropOut">
-          <div class="triangle"></div>
-          <ul>
-            <li><a href="#card">Card</a></li>
-            <li><a href="#card">Headlines</a></li>
-            <li><a href="#button">Buttons</a></li>
-            <li><a href="#input">Inputs</a></li>
-            <li><a href="#list">List</a></li>
-            <li><a href="#table">Tables</a></li>
-            <li><a href="#images">Image</a></li>
-          </ul>
-        </div>
-      </div>
-    </span>
-
-      <span href="" class="navLink drop">Layout
-        <div class="dropdownContain">
-          <div class="dropOut">
-            <div class="triangle"></div>
-            <ul>
-              <li><a href="">Grid</a></li>
-              <li><a href="">Navbar</a></li>
-              <li><a href="">DropDowns</a></li>
-              <li><a href="">Footer</a></li>
-            </ul>
-          </div>
-        </div>
-      </span>
-      <a href="http://github.com/halfsail/Bento-Box/zip/master/" class="navLink">Download</a>
-    </section>
-  </div>
-  </nav>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row" style="margin-top: 25%">
-      <div class="one-third column">
-        <img src="images/bentoBox.png" alt="" style="height:250px; width:auto; ">
-      </div>
-      <div class="one-half column">
-        <h4>Bento Box</h4>
-        <p></p>
-        <a href="" class="button button-primary">Download It</a> <a href="" class="button"> Fork It</a>
-      </div>
-    </div>
-    <hr id="card">
-    <article class="row">
-      <div class="seven columns">
-        <h4>Card</h4>
-        <p>The card component is used to get a closer look at a post. Otherwise you the <a href="#postImage">post image</a> component.
-          The card component is the only component that shows a post description.</p>
-        <article class="card">
-        <img src="http://placehold.it/350x350">
-        <section class="caption">
-          <h6>user name</h6>
-          <p>hipster love their cold brew</p>
-        </section>
-        </article>
-      </div>
-      <div class="three columns">
-        <h4>Headline examples</h4>
-        <h1>Headline 1</h1>
-        <h2>Headline 2</h2>
-        <h3>Headline 3</h3>
-        <h4>Headline 4</h4>
-        <h5>Headline 5</h5>
-        <h6>Headline 6</h6>
-    </div>
-    </article>
-    <article class="row">
-      <hr id="button">
-      <h4>Buttons</h4>
-      <p>Buttons come in two basic flavors in Bento. The standard <code>.button</code> element is plain, whereas the <code>.button-primary </code> button is vibrant and has a drop shadow on hover</p>
-        <section>
-          <!-- Primary buttons -->
-          <a class="button button-primary" href="#">Anchor button</a>
-          <button class="button-primary">Button element</button>
-          <input class="button-primary" type="submit" value="submit input">
-          <input class="button-primary" type="button" value="button input">
-        </section>
-        <section>
-          <!-- Standard buttons -->
-          <a class="button" href="#">Anchor button</a>
-          <button>Button element</button>
-          <input type="submit" value="submit input">
-          <input type="button" value="button input">
-        </section>
-    </article>
-    <article class="row">
-      <hr id="input">
-      <h4>Input</h4>
-<div class="row">
-<div class="six columns">
-<label for="exampleEmailInput">Your email</label>
-<input class="u-full-width underline" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-</div>
-<div class="six columns">
-<label for="exampleRecipientInput">Reason for contacting</label>
-<select class="u-full-width" id="exampleRecipientInput">
-  <option value="Option 1">Questions</option>
-  <option value="Option 2">Admiration</option>
-  <option value="Option 3">Can I get your number?</option>
-</select>
-</div>
-</div>
-<label for="exampleMessage">Message</label>
-<textarea class="u-full-width solid" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-<label class="example-send-yourself-copy">
-<input type="checkbox">
-<span class="label-body">Send a copy to yourself</span>
-</label>
-<input class="button-primary" type="submit" value="Submit">
-</form>
-    </article>
-    <hr id="list">
-    <article class="row">
-      <h4>List</h4>
-      <p>In bento you have three different list options. With the final option <code>.noStyle</code> has no list-style.</p>
-      <div class="three columns">
-        <ol>
-          <li>Order List</li>
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-          <li>item 4</li>
-          <li>item 5</li>
-        </ol>
-      </div>
-      <div class="three columns">
         <ul>
-          <li>Unordered list</li>
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-          <li>item 4</li>
-          <li>item 5</li>
+          <li><a href="https://github.com/halfsail/Bento-Box/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/halfsail/Bento-Box/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/halfsail/Bento-Box">View On <strong>GitHub</strong></a></li>
         </ul>
-      </div>
-      <div class="three columns">
-        <ul class="noStyle">
-          <li>No style</li>
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-          <li>item 4</li>
-          <li>item 5</li>
-        </ul>
-      </div>
-    </article>
-    <hr id="table">
-    <article class="row">
-      <h4>Tables</h4>
-      <p>Tables need to by properly formated with <code>thead</code> and <code>tbody</code>.</p>
-      <table class="u-full-width">
-    <thead>
-      <tr>
-        <th>Pokemon</th>
-        <th>Level</th>
-        <th>Type</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Bulbsaur</td>
-        <td>5</td>
-        <td>Grass</td>
-      </tr>
-      <tr>
-        <td>Charamder</td>
-        <td>5</td>
-        <td>Fire</td>
-      </tr>
-      <tr>
-        <td>Squirtle</td>
-        <td>5</td>
-        <td>Water</td>
-      </tr>
-    </tbody>
-  </table>
-    </article>
-    <hr id="images">
-    <article class="row">
-      <h4 id="postImage">Post Images</h4>
-      <p>These simple flexbox items will wrap to form grids base of the document size.
-        On hover the image lifts off the page to give the user feed back Both the image and user name are links that will take you to different places.</p>
-        <section class="flexGrid">
-          <article class="postImage">
-            <a href="">
-              <img src="http://placehold.it/250">
-            </a>
-            <p><a href="#">User Name</a></p>
-          </article>
-          <article class="postImage">
-            <a href="">
-              <img src="http://placehold.it/250">
-            </a>
-            <p><a href="#">User Name</a></p>
-          </article>
-          <article class="postImage">
-            <a href="">
-              <img src="http://placehold.it/250">
-            </a>
-            <p><a href="#">User Name</a></p>
-          </article>
-        </section>
-    <hr>
-    <h4>Avatar Images</h4>
-    <p>These circles images shape also helps them distinguished users from posts. Unlike the post image element the whole avatar image section is a giant link.
-    Their show only be one row of six at anytime on the main feeds.</p>
-    <section class="flexGrid">
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
-      <article class="avatarImage">
-        <a href="">
-          <img src="http://placehold.it/100">
-          <p href="#">User Name</p>
-        </a>
-      </article>
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-  </section>
-    </article>
-  </div>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/halfsail">halfsail</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
